--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "wedding-app",
+  "name": "wedding-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "dev:db": "json-server db.json --port=8000"
+    "lint": "next lint"
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3",
-    "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "axios": "^1.8.3",
+    "next": "15.2.1",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-hot-toast": "^2.5.2",
+    "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8",
-    "prettier": "3.4.2",
-    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "15.2.1",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
